gutenprint (5.2.1-1) experimental; urgency=low

  [ W. van den Akker ]
  * Upgraded to Standards version 3.8.0.
  * debian/*: Update version from 5.1 to 5.2. 

  [ Roger Leigh ]
  * New upstream stable release.
  * debian/control.in: Add Vcs-Browser and Vcs-Git fields. 
  * debian/control.in: Remove, leaving debian/control. 

 -- Roger Leigh <rleigh@debian.org>  Wed, 29 Oct 2008 20:15:10 +0000

gutenprint (5.1.98.2-2) experimental; urgency=low

  * debian/cupsys-driver-gutenprint.postinst: Remove version suffix from
    cups-genppdupdate.
  * debian/rules, debian/cupsys-driver-gutenprint.install: Remove
    cups-genppd; this is no longer needed with CUPS 1.2.x
    (Closes: #474994).
  * debian/control: Remove debian revision in Build-Depends package
    versions.

 -- Roger Leigh <rleigh@debian.org>  Sat, 10 May 2008 12:32:39 +0100

gutenprint (5.1.98.2-1) unstable; urgency=low

  * New upstream stable beta release (Closes: #439961, #480113).
  * debian/rules:
    - Remove debian/libgutenprint2.install from GENERATED_FILES, and
      remove the rule to generate it.
    - Rename versioned binaries to 5.1.
    - Remove commands for programs and manpages removed in this release.
  * debian/control.in:
    - Bump version from 5.0 to 5.1.
    - cupsys-driver-gutenprint dependency on older ghostscript versions has
      been restored, to allow migration to testing.
  * debian/cupsys-driver-gutenprint.install:
    - Rename versioned binaries to 5.1.
    - Remove cups-genppdconfig.
  * debian/cupsys-driver-gutenprint.postinst,
    debian/cupsys-driver-gutenprint.postrm,
    debian/cupsys-driver-gutenprint.preinst: Rename versioned binaries to
    5.1.
  * debian/gutenprint-doc.doc-base: Update version, section is now Graphics.
  * debian/ijsgutenprint.install: Rename versioned binaries to 5.1.
  * debian/libgutenprint2.install.in: Rename to
    debian/libgutenprint2.install and hard-code version.
  * debian/libgutenprint-doc.doc-base.developer,